# portal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Makefile  README.md  SECURITY.md  deploy.sh  docker-compose.yml  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  docker-image.yml  image-scan.yml  (+1 more)
apps/api/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 131190297565_initial_schema.py  7d921028445a_download_links.py  a1c2d3e4f5a6_timestamptz_timestamp_mixin.py  a7b8c9d0e1f2_upload_session_liveness.py  b2e4c6a8d013_upload_link_target_subfolder.py  c1b2d3e4f5a7_app_settings_branding.py  c2b3d4e5f6a8_user_totp.py  c3b4d5e6f7a9_webauthn_credentials.py  d4c5e6f7a8b0_app_settings_email_frameio_config.py  e5d6f7a8b9c0_download_session_files.py  f590a1d0c76b_email_verification_verify_email_flags.py  f6e7d8c9b0a1_drop_per_entity_logo_accent.py
apps/api/src/portal/: main.py  seed.py
apps/api/src/portal/auth/: passwords.py  session.py  totp.py  webauthn.py
apps/api/src/portal/db/: base.py  models.py  session.py
apps/api/src/portal/downloads/: links.py
apps/api/src/portal/frameio/: client.py  connection.py  oauth.py  webhooks.py
apps/api/src/portal/lib/: config.py  crypto.py  errors.py  lockout.py  logging.py  ratelimit.py  validators.py
apps/api/src/portal/notify/: email.py
apps/api/src/portal/routes/: activity.py  auth.py  branding.py  dashboard.py  destinations.py  download_links.py  frameio.py  health.py  privacy.py  public.py  public_downloads.py  security.py  settings.py  sync_rules.py  upload_links.py  webhooks.py
apps/api/src/portal/services/: app_settings.py  frameio_paths.py  retention.py  runtime_config.py  sync_coverage.py  upload_sessions.py
apps/api/src/portal/storage/: __init__.py  base.py  frameio_backend.py
apps/api/src/portal/sync/: download.py  events.py  paths.py  queue.py  runner.py  worker.py
apps/api/src/portal/uploads/: links.py
apps/api/src/portal/verify/: __init__.py  email_check.py  gate.py  service.py  trust.py
apps/api/tests/: conftest.py  test_activity.py  test_auth.py  test_crypto.py  test_dashboard.py  test_destinations.py  test_download_links.py  test_frameio.py  test_frameio_client.py  test_health.py  test_link_stats.py  test_notify.py  test_password_lockout.py  test_passwords.py  test_privacy.py  test_ratelimit.py  test_retention.py  test_secret_guard.py  test_security.py  test_settings.py  test_sync_coverage.py  test_sync_download.py  test_sync_paths.py  test_sync_rules.py  test_sync_runner.py  test_sync_upload_trigger.py  test_sync_worker.py  test_totp.py  test_upload_abandon.py  test_upload_links.py  test_validators.py  test_verify.py  test_verify_flows.py  test_webhooks.py
deploy/: .env.example  ADOBE_DEVELOPER_CONSOLE_SETUP.md  Caddyfile  docker-compose.yml  host-caddy.example
docker/: Caddyfile  docker-compose.dev.yml
docs/: ADOBE_DEVELOPER_CONSOLE_SETUP.md  DEPLOY.md  FRAMEIO_CLIENT.md  FRAMEIO_OAUTH.md  GO_PUBLIC.md
(+82 files in other folders)
