[project]
name = "portal"
version = "0.1.0"
description = "Self-hosted Frame.io-backed file transfer platform for post-production"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.30",
    "alembic>=1.18.5",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.14.2",
    "structlog>=24.4",
    "cryptography>=48.0.1",
    "bcrypt>=4.2",
    "itsdangerous>=2.2",
    "redis>=5.2",
    "arq>=0.26",
    "python-multipart>=0.0.20",
    "authlib>=1.4",
    "httpx>=0.28",
    "frameio>=1.2.5,<2",
    "aiosmtplib>=5.1.2",
    "dnspython>=2.8.0",
    "webauthn>=2.8.0",
    "pyotp>=2.10.0",
    "qrcode>=8.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15.21",
    "mypy>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portal"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic autogenerates these; don't lint generated migration files.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's Depends() in argument defaults is the intended pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["arq.*", "authlib.*", "qrcode.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
